<resources>
    <string name="app_name">GAD P2 Test 30 April</string>
    <string name="login_terms">Terms and Conditions</string>
    <string name="login_privacy">Privacy Policy</string>
    <string name="login_string">Login</string>
    <string name="email_string">Email</string>
    <string name="password_string">Password</string>
    <string name="signup">Not registered yet? Sign up</string>
    <string name="forgot">Forgot Password?</string>
    <string name="txtseperator">OR LOGIN WITH</string>
    <string name="txtagree1">By logging in, you agree to our </string>
    <string name="terms_and">and</string>
    <string name="select_language">Select language</string>
    <string name="registered_email">Enter registered email</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="wrong_password">Wrong Password</string>
    <string name="login_failed">Login failed</string>
    <string name="sign_up">Sign up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="country">Country</string>
    <string name="logintxt">Already have an account? <u>Login</u></string>
    <string name="length_error_1">Length cannot be greater than 15 characters</string>
    <string name="length_error_2">Length cannot be greater than 20 characters</string>
    <string name="youAreNotUpdatedTitle">Update Available</string>
    <string name="youAreNotUpdatedMessage">A new version of GiftADeed is available. Please update.</string>
    <string name="update">Update</string>
    <string name="network_validation">OOPS! No INTERNET. Please check your network connection</string>
    <string name="server_response_error">Something went wrong. Please try later</string>
    <string name="contact_saved">Contact saved</string>
    <string name="setting_saved">Settings saved</string>
    <string name="block_toast">You have been blocked</string>
    <string name="group_deleted">Group deleted successfully</string>
    <string name="error">Error</string>
    <string name="exit_group_msg">You successfully exited from group</string>
    <string name="group_created_msg">Group created successfully</string>
    <string name="you_havnt_change">You havn\'t changed group information</string>
    <string name="group_edited">Group edited successfully</string>
    <string name="member_removed">Member removed successfully</string>
    <string name="member_added">Member added successfully</string>
    <string name="no_data_found">No data found</string>
    <string name="admin_assigned">Admin assigned successfully</string>
    <string name="admin_dismissed">Admin dismissed successfully</string>
    <string name="address_notfound">Address not found</string>
    <string name="user_reported">User reported successfully</string>
    <string name="edited_success">Edited successfully</string>
    <string name="check_email">Please check your email</string>
    <string name="select_account">Please select your account from the list</string>
    <string name="login_unsuccess">Login was unsuccessful</string>
    <string name="email_already_exist">Email address already exists</string>
    <string name="length_msg">Length cannot be greater than 500 characters</string>
    <string name="unable_to_find">Unable to find address</string>
    <string name="edited_unsucess">Edited unsuccessfully</string>
    <string name="select_country">Select country</string>
    <string name="select_state">Select state</string>
    <string name="select_city">Select city</string>
    <string name="permission_denied">Permission are denied please enable permissions</string>
    <string name="already_deed">This deed is already reported by someone</string>
    <string name="sos_location_error">Location cannot be blank. Please get location</string>
    <string name="sos_success">Emergency created successfully</string>
    <string name="view_profile">View Profile</string>
    <string name="drawer_home">Home</string>
    <string name="drawer_groups">Groups</string>
    <string name="drawer_inspire">Inspire Community</string>
    <string name="drawer_tag_deed">Tag A Deed</string>
    <string name="drawer_resources">Resources</string>
    <string name="drawer_about_app">About App</string>
    <string name="drawer_notification">Notifications</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_emergency_contacts">Emergency Contacts</string>
    <string name="drawer_logout">Logout</string>
    <string name="my_tags">MY TAGS</string>
    <string name="noti_history">Notification History</string>
    <string name="my_tags_heading">My Tags</string>
    <string name="list_of_your">List of your tagged</string>
    <string name="list_of_mytags">List of my tags</string>
    <string name="list_of_myfulfilled_tags">List of My Fulfilled Tags</string>
    <string name="list_of_taggers">List of top 10 taggers in your city</string>
    <string name="list_of_fulfillers">List of top 10 tag fulfillers in your city</string>
    <string name="dash1">Your last good deed was on</string>
    <string name="dash2">Your total number of Tags are</string>
    <string name="dash3">Your total number of Fulfillments are</string>
    <string name="dash4">Your percentage of successful tags is</string>
    <string name="dash5">Your Gift a Deed score is</string>
    <string name="my_fulfil_tags_heading">My Fulfilled Tags</string>
    <string name="top_ten_heading">Top 10 Taggers</string>
    <string name="top_ten_fulfill_heading">Top 10 Tag Fulfillers</string>
    <string name="tag_counter_heading">Tag Counter</string>
    <string name="dashboard_heading">Dashboard</string>
    <string name="about_us_heading">About Us</string>
    <string name="terms_heading">Terms and Conditions</string>
    <string name="privacy_heading">Privacy Policy</string>
    <string name="cookies_heading">Cookies Policy</string>
    <string name="end_user_heading">End-user Agreement</string>
    <string name="dis_heading">Disclaimer</string>
    <string name="help_heading">Help</string>
    <string name="contact_us_heading">Contact Us</string>
    <string name="map_map">MAP</string>
    <string name="map_list">LIST</string>
    <string name="map_tagged_deeds">Tagged Deeds</string>
    <string name="map_home">Home</string>
    <string name="map_tagadeed">Tag a deed</string>
    <string name="map_fulfilled_tags">Fulfilled Tags</string>
    <string name="grp_deed_title">Group Deeds</string>
    <string name="active_tags">Active tags</string>
    <string name="no_group_found">No groups found. Do you want to create one?</string>
    <string name="action_create_group">Create Group</string>
    <string name="edit_group">Edit Group</string>
    <string name="group_name">Group Name *</string>
    <string name="group_desc">Group Description</string>
    <string name="save">Save</string>
    <string name="take_picture">Take Picture</string>
    <string name="browse">Browse</string>
    <string name="add_member">Add members</string>
    <string name="member_list">Member list</string>
    <string name="total_members">Total members</string>
    <string name="no_members">No members found</string>
    <string name="search_member">Search member *</string>
    <string name="select_action">Select Action</string>
    <string name="remove_member">Remove member</string>
    <string name="make_admin">Make group admin</string>
    <string name="dismiss_admin">Dismiss as admin</string>
    <string name="search_email">Search email *</string>
    <string name="view_member_list">View member list</string>
    <string name="delete_group">Delete group</string>
    <string name="group_info">Group info</string>
    <string name="exit_group">Exit group</string>
    <string name="my_profile">My Profile</string>
    <string name="edit_profile">Edit</string>
    <string name="my_credits">My Credits - </string>
    <string name="change_pass">Change Password</string>
    <string name="change_pic">Change Picture</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="privacy">Privacy :</string>
    <string name="anonymous">Anonymous</string>
    <string name="public_1">Public</string>
    <string name="gender">Gender :</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="main_cat">Main Categories</string>
    <string name="group_cat">Group Categories</string>
    <string name="edit_deed">Edit Deed</string>
    <string name="select_category">Select Category</string>
    <string name="select_sub_category">Select Sub-Category</string>
    <string name="select_pref">Select Preferences</string>
    <string name="select_location">Select Location</string>
    <string name="permanent_location">Permanent location</string>
    <string name="remove_location">Remove Location</string>
    <string name="deed_validity_heading">Deed Validity (1 to 48 Hours)</string>
    <string name="select_audiance">Select audience</string>
    <string name="description">Description</string>
    <string name="post">Post</string>
    <string name="container_available">Container Available</string>
    <string name="container_note">* Whether that needy person has a food plate/water container to recive the donated food/water?</string>
    <string name="deed_details_heading">Deed Details</string>
    <string name="str_location">Location : </string>
    <string name="no_needy">No needy people around you</string>
    <string name="people_looking_1"> Person is looking for your help </string>
    <string name="people_looking_2"> People are looking for your help </string>
    <string name="pref_1"> Preferences for person / people : </string>
    <string name="deed_location">Deed Location : </string>
    <string name="deed_details">Deed Details : </string>
    <string name="see_more">See More</string>
    <string name="get_directions">Get Directions</string>
    <string name="tagged_by">Deed tagged By : </string>
    <string name="tagged_by_group">Tagged By group : </string>
    <string name="edit">Edit</string>
    <string name="comment">COMMENT</string>
    <string name="report_deed">Report Deed</string>
    <string name="report_user">Report User</string>
    <string name="last_endorse_time">Last endorsed on : </string>
    <string name="gift_now">Gift Now</string>
    <string name="press_enter_to_post">Press Enter to post</string>
    <string name="comments">Comments</string>
    <string name="gift_title">Gift A Deed</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="snap">Snap  </string>
    <string name="is_this_deed">Is this deed fulfilled completely?</string>
    <string name="tell_people">Tell people about your gift</string>
    <string name="first_login">First Login</string>
    <string name="app_settings">App Settings</string>
    <string name="notif_settings">Notification Settings</string>
    <string name="receive_notif">Receive Notifications</string>
    <string name="groupwise_notif">Group wise Notifications</string>
    <string name="catwise_notif">Category wise Notifications</string>
    <string name="save_settings">Save Settings</string>
    <string name="GPSsettings">GPS  Settings</string>
    <string name="GPSsettingsmessage">GPS is not enabled. Go to settings menu and enable GPS</string>
    <string name="settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="aboutMe">About Me</string>
    <string name="here_hyperlink"><a href="https://play.google.com/store/apps/details?id=giftadeed.kshantechsoft.com.giftadeed">here</a></string>
    <string name="apply_filters">Apply Filters</string>
    <string name="radius">Radius</string>
    <string name="apply">Apply</string>
    <string name="take_photo">Take photo</string>
    <string name="select_from_gallery">Select from Gallery</string>
    <string name="select_from_avatars">Select from Avatars</string>
</resources>