<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="@string/drawer_home" />
        <item
            android:id="@+id/nav_taganeed"
            android:icon="@drawable/tag_a_deed_icon"
            android:title="@string/drawer_tag_deed" />
        <item
            android:id="@+id/nav_groups"
            android:icon="@drawable/group_icon"
            android:title="@string/drawer_groups" />
        <item
            android:id="@+id/nav_inspire_community"
            android:icon="@drawable/inspire_icon"
            android:title="@string/drawer_inspire" />
        <item
            android:id="@+id/nav_mytags"
            android:icon="@drawable/my_tags_icon"
            android:visible="false"
            android:title="My Tags" />
        <item
            android:id="@+id/nav_myfulfilledtags"
            android:icon="@drawable/fulfill_a_deed_icon"
            android:visible="false"
            android:title="My Fulfilled Tags" />
        <item
            android:id="@+id/nav_resources"
            android:icon="@drawable/resources_icon_1"
            android:title="@string/drawer_resources" />
        <item
            android:id="@+id/toptenaggers"
            android:icon="@drawable/top_10_taggers_icon"
            android:visible="false"
            android:title="Top 10 Taggers" />
        <item
            android:id="@+id/topfullfillers"
            android:icon="@drawable/top_10_fulfillers_icon"
            android:visible="false"
            android:title="Top 10 Tag Fulfillers" />
        <item
            android:id="@+id/aboutapp"
            android:icon="@drawable/about_app"
            android:title="@string/drawer_about_app" />
        <item
            android:id="@+id/notifications"
            android:icon="@drawable/notification_icon"
            android:title="@string/drawer_notification"
            app:actionLayout="@layout/menu_counter"/>
        <item
            android:id="@+id/settings"
            android:icon="@drawable/settings_icon"
            android:title="@string/drawer_settings" />
        <item
            android:id="@+id/emergency_contacts"
            android:icon="@drawable/contact_book_icon"
            android:title="@string/drawer_emergency_contacts" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/logout_icon"
            android:title="@string/drawer_logout" />
    </group>
</menu>
