<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="giftadeed.kshantechsoft.com.giftadeed.Filter.FilterFrag">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtfilterapplyfilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/apply_filters"
                android:textAllCaps="false"
                android:textSize="@dimen/finalheaderfont" />

            <TextView
                android:id="@+id/txtfilterradius"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/radius"
                android:textSize="@dimen/finaltextfont" />


            <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
                android:id="@+id/discreteProgressbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:dsb_indicatorColor="@color/colorAccent"
                app:dsb_indicatorElevation="0dp"
                app:dsb_max="100000"
                app:dsb_min="35"
                app:dsb_progressColor="@color/colorAccent" />

            <TextView
                android:id="@+id/txtdistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="10 km" />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/filterdcategorylength"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColorHint="#000">

                <EditText

                    android:id="@+id/edfiltercategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="20dp"
                    android:backgroundTint="#000"
                    android:drawableRight="@android:drawable/arrow_down_float"
                    android:editable="false"
                    android:focusable="false"
                    android:hint="@string/select_category" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btnfilterapply"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignParentBottom="true"
            android:background="@color/colorAccent"
            android:text="@string/apply"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/finalheaderfont"

            ></Button>
    </RelativeLayout>
</FrameLayout>
